[tool.poetry]
name = "cool-project"
version = "0.1.0"
description = ""
authors = ["aerioy <amiragrama@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0"
pygame = "^2.1.2"
dearpygui = "^1.6.2"
numpy = "^2.0.0"
torch = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
